crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__terminators-continuation.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Investigator",
            "speaker_code": "EXP"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Investigator",
        "speaker": "EXP",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Continuation terminators: trailing off (+...), interruption (+/.),",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "self-interruption (+//.), break for coding (+.)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: trailing_off, interruption, self_interruption, break_for_coding",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "was",
              "content": [
                {
                  "content": "was",
                  "type": "text"
                }
              ],
              "raw_text": "was",
              "type": "word"
            },
            {
              "cleaned_text": "going",
              "content": [
                {
                  "content": "going",
                  "type": "text"
                }
              ],
              "raw_text": "going",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "trailingoff"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "do",
              "content": [
                {
                  "content": "do",
                  "type": "text"
                }
              ],
              "raw_text": "do",
              "type": "word"
            },
            {
              "cleaned_text": "they",
              "content": [
                {
                  "content": "they",
                  "type": "text"
                }
              ],
              "raw_text": "they",
              "type": "word"
            },
            {
              "cleaned_text": "do",
              "content": [
                {
                  "content": "do",
                  "type": "text"
                }
              ],
              "raw_text": "do",
              "type": "word"
            },
            {
              "cleaned_text": "with",
              "content": [
                {
                  "content": "with",
                  "type": "text"
                }
              ],
              "raw_text": "with",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "interruption"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "they",
              "content": [
                {
                  "content": "they",
                  "type": "text"
                }
              ],
              "raw_text": "they",
              "type": "word"
            },
            {
              "cleaned_text": "play",
              "content": [
                {
                  "content": "play",
                  "type": "text"
                }
              ],
              "raw_text": "play",
              "type": "word"
            },
            {
              "cleaned_text": "with",
              "content": [
                {
                  "content": "with",
                  "type": "text"
                }
              ],
              "raw_text": "with",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "toys",
              "content": [
                {
                  "content": "toys",
                  "type": "text"
                }
              ],
              "raw_text": "toys",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "and",
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "type": "word"
            },
            {
              "cleaned_text": "then",
              "content": [
                {
                  "content": "then",
                  "type": "text"
                }
              ],
              "raw_text": "then",
              "type": "word"
            },
            {
              "cleaned_text": "she",
              "content": [
                {
                  "content": "she",
                  "type": "text"
                }
              ],
              "raw_text": "she",
              "type": "word"
            },
            {
              "cleaned_text": "wouldn't",
              "content": [
                {
                  "content": "wouldn't",
                  "type": "text"
                }
              ],
              "raw_text": "wouldn't",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "selfinterruption"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "foo",
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                }
              ],
              "raw_text": "foo",
              "type": "word"
            },
            {
              "cleaned_text": "bar",
              "content": [
                {
                  "content": "bar",
                  "type": "text"
                }
              ],
              "raw_text": "bar",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "break_for_coding"
          }
        },
        "speaker": "EXP"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "EXP": {
      "birth_date": null,
      "code": "EXP",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Investigator",
        "speaker": "EXP"
      },
      "name": null,
      "role": "Investigator"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
